--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@netlify/functions": "^0.10.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "budoux": "^0.0.1",
     "core-js": "^3.15.1",
     "dom-to-image": "^2.6.0",
