--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "nuxi dev",
+    "build": "nuxi generate",
+    "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
@@ -17,15 +17,15 @@
     "budoux": "^0.0.1",
     "core-js": "^3.15.1",
     "dom-to-image": "^2.6.0",
-    "nuxt": "^2.15.7",
+    "nuxt-edge": "latest",
     "sharp": "^0.29.3",
     "vue-typer": "^1.2.0",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
     "@mdi/js": "^6.5.95",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/eslint-config-typescript": "^7.0.2",
     "@nuxtjs/vuetify": "^1.12.1",
