--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
-    "build": "nuxi generate",
+    "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
