--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dom-to-image": "^2.6.0",
     "nuxt-edge": "latest",
     "sharp": "^0.29.3",
+    "text-to-svg": "^3.1.5",
     "vue-typer": "^1.2.0",
     "vuetify": "^2.5.5"
   },
@@ -31,6 +32,7 @@
     "@nuxtjs/vuetify": "^1.12.1",
     "@types/dom-to-image": "^2.6.4",
     "@types/sharp": "^0.29.4",
+    "@types/text-to-svg": "^3.1.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
