--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "netlify": "netlify dev"
+    "vercel": "vercel dev"
   },
   "dependencies": {
-    "@netlify/functions": "^0.10.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "budoux": "^0.0.1",
     "core-js": "^3.15.1",
@@ -34,11 +33,11 @@
     "@types/dom-to-image": "^2.6.4",
     "@types/sharp": "^0.29.4",
     "@types/text-to-svg": "^3.1.1",
+    "@vercel/node": "^1.12.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.0.0",
-    "netlify-cli": "^8.0.3",
     "prettier": "^2.4.1",
     "vuex-module-decorators": "^2.0.0"
   }
