--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vercel": "vercel dev"
   },
   "dependencies": {
+    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sitemap": "^2.4.0",
     "budoux": "^0.0.1",
     "core-js": "^3.15.1",
